--- a/src/bin/initdb/po/es.po
+++ b/src/bin/initdb/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: initdb (PostgreSQL) 14\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2022-08-07 20:20+0000\n"
-"PO-Revision-Date: 2021-10-13 23:44-0500\n"
+"PO-Revision-Date: 2022-09-03 15:29+0200\n"
 "Last-Translator: Carlos Chapi <carloswaldo@babelruins.org>\n"
 "Language-Team: PgSQL-es-Ayuda <pgsql-es-ayuda@lists.postgresql.org>\n"
 "Language: es\n"
@@ -33,12 +33,12 @@ msgstr "precaución: "
 #: ../../../src/common/logging.c:294
 #, c-format
 msgid "detail: "
-msgstr ""
+msgstr "detalle: "
 
 #: ../../../src/common/logging.c:301
 #, c-format
 msgid "hint: "
-msgstr ""
+msgstr "consejo: "
 
 #: ../../common/exec.c:149 ../../common/exec.c:266 ../../common/exec.c:312
 #, c-format
@@ -313,14 +313,9 @@ msgid "cannot be run as root"
 msgstr "no se puede ejecutar como «root»"
 
 #: initdb.c:599
-#, fuzzy, c-format
-#| msgid ""
-#| "Please log in (using, e.g., \"su\") as the (unprivileged) user that will\n"
-#| "own the server process.\n"
+#, c-format
 msgid "Please log in (using, e.g., \"su\") as the (unprivileged) user that will own the server process."
-msgstr ""
-"Por favor conéctese (usando, por ejemplo, «su») con un usuario no privilegiado,\n"
-"quien ejecutará el proceso servidor.\n"
+msgstr "Por favor conéctese (usando, por ejemplo, «su») con un usuario no privilegiado, quien ejecutará el proceso servidor."
 
 #: initdb.c:631
 #, c-format
@@ -333,14 +328,9 @@ msgid "file \"%s\" does not exist"
 msgstr "el archivo «%s» no existe"
 
 #: initdb.c:776 initdb.c:781 initdb.c:788
-#, fuzzy, c-format
-#| msgid ""
-#| "This might mean you have a corrupted installation or identified\n"
-#| "the wrong directory with the invocation option -L.\n"
+#, c-format
 msgid "This might mean you have a corrupted installation or identified the wrong directory with the invocation option -L."
-msgstr ""
-"Esto puede significar que tiene una instalación corrupta o ha\n"
-"identificado el directorio equivocado con la opción -L.\n"
+msgstr "Esto puede significar que tiene una instalación corrupta o ha identificado el directorio equivocado con la opción -L."
 
 #: initdb.c:780
 #, c-format
@@ -392,10 +382,9 @@ msgid "input file \"%s\" does not belong to PostgreSQL %s"
 msgstr "el archivo de entrada «%s» no pertenece a PostgreSQL %s"
 
 #: initdb.c:1333
-#, fuzzy, c-format
-#| msgid "Check your installation or specify the correct path using the option -L.\n"
+#, c-format
 msgid "Specify the correct path using the option -L."
-msgstr "Verifique su instalación o especifique la ruta correcta usando la opción -L.\n"
+msgstr "Especifique la ruta correcta usando la opción -L."
 
 #: initdb.c:1437
 msgid "Enter new superuser password: "
@@ -461,31 +450,21 @@ msgid "encoding mismatch"
 msgstr "codificaciones no coinciden"
 
 #: initdb.c:2081
-#, fuzzy, c-format
-#| msgid ""
-#| "The encoding you selected (%s) and the encoding that the\n"
-#| "selected locale uses (%s) do not match.  This would lead to\n"
-#| "misbehavior in various character string processing functions.\n"
-#| "Rerun %s and either do not specify an encoding explicitly,\n"
-#| "or choose a matching combination.\n"
+#, c-format
 msgid "The encoding you selected (%s) and the encoding that the selected locale uses (%s) do not match. This would lead to misbehavior in various character string processing functions."
-msgstr ""
-"La codificación que seleccionó (%s) y la codificación de la configuración\n"
-"regional elegida (%s) no coinciden.  Esto llevaría a comportamientos\n"
-"erráticos en ciertas funciones de procesamiento de cadenas de caracteres.\n"
-"Ejecute %s nuevamente y no especifique una codificación, o bien especifique\n"
-"una combinación adecuada.\n"
+msgstr "La codificación que seleccionó (%s) y la codificación de la configuración regional elegida (%s) no coinciden.  Esto llevaría a comportamientos erráticos en ciertas funciones de procesamiento de cadenas de caracteres."
 
 #: initdb.c:2086
 #, c-format
 msgid "Rerun %s and either do not specify an encoding explicitly, or choose a matching combination."
 msgstr ""
+"Vuelva a ejecutar %s sin escoger explícitamente una codificación, o bien\n"
+"escoja una combinación coincidente."
 
 #: initdb.c:2148
-#, fuzzy, c-format
-#| msgid "host name must be specified\n"
+#, c-format
 msgid "ICU locale must be specified"
-msgstr "el nombre de servidor debe ser especificado\n"
+msgstr "el locale ICU debe ser especificado"
 
 #: initdb.c:2155
 #, c-format
@@ -559,11 +538,10 @@ msgstr ""
 "                            el directorio de datos\n"
 
 #: initdb.c:2176
-#, fuzzy, c-format
-#| msgid "      --locale=LOCALE       set default locale for new databases\n"
+#, c-format
 msgid "      --icu-locale=LOCALE   set ICU locale ID for new databases\n"
 msgstr ""
-"      --locale=LOCALE       configuración regional por omisión para \n"
+"      --icu-locale=LOCALE   definir el ID de configuración regional ICU para\n"
 "                            nuevas bases de datos\n"
 
 #: initdb.c:2177
@@ -598,14 +576,14 @@ msgid "      --no-locale           equivalent to --locale=C\n"
 msgstr "      --no-locale           equivalente a --locale=C\n"
 
 #: initdb.c:2184
-#, fuzzy, c-format
-#| msgid "      --locale=LOCALE       set default locale for new databases\n"
+#, c-format
 msgid ""
 "      --locale-provider={libc|icu}\n"
 "                            set default locale provider for new databases\n"
 msgstr ""
-"      --locale=LOCALE       configuración regional por omisión para \n"
-"                            nuevas bases de datos\n"
+"      --locale-provider={libc|icu}\n"
+"                            define el proveedor de configuración regional\n"
+"                            para nuevas bases de datos\n"
 
 #: initdb.c:2186
 #, c-format
@@ -686,10 +664,9 @@ msgid "  -s, --show                show internal settings\n"
 msgstr "  -s, --show                muestra variables internas\n"
 
 #: initdb.c:2201
-#, fuzzy, c-format
-#| msgid "  -S, --sync-only           only sync data directory\n"
+#, c-format
 msgid "  -S, --sync-only           only sync database files to disk, then exit\n"
-msgstr "  -S, --sync-only           sólo sincronizar el directorio de datos\n"
+msgstr "  -S, --sync-only           sólo sincronizar el directorio de datos y salir\n"
 
 #: initdb.c:2202
 #, c-format
@@ -751,15 +728,9 @@ msgid "no data directory specified"
 msgstr "no se especificó un directorio de datos"
 
 #: initdb.c:2270
-#, fuzzy, c-format
-#| msgid ""
-#| "You must identify the directory where the data for this database system\n"
-#| "will reside.  Do this with either the invocation option -D or the\n"
-#| "environment variable PGDATA.\n"
+#, c-format
 msgid "You must identify the directory where the data for this database system will reside.  Do this with either the invocation option -D or the environment variable PGDATA."
-msgstr ""
-"Debe especificar el directorio donde residirán los datos para este clúster.\n"
-"Hágalo usando la opción -D o la variable de ambiente PGDATA.\n"
+msgstr "Debe especificar el directorio donde residirán los datos para este clúster.  Hágalo usando la opción -D o la variable de ambiente PGDATA."
 
 #: initdb.c:2287
 #, c-format
@@ -767,28 +738,14 @@ msgid "could not set environment"
 msgstr "no se pudo establecer el ambiente"
 
 #: initdb.c:2305
-#, fuzzy, c-format
-#| msgid ""
-#| "The program \"%s\" is needed by %s but was not found in the\n"
-#| "same directory as \"%s\".\n"
-#| "Check your installation."
+#, c-format
 msgid "program \"%s\" is needed by %s but was not found in the same directory as \"%s\""
-msgstr ""
-"%s necesita el programa «%s», pero no pudo encontrarlo en el mismo\n"
-"directorio que «%s».\n"
-"Verifique su instalación."
+msgstr "el programa «%s» es requerido por %s pero se encontró en el mismo directorio que «%s»"
 
 #: initdb.c:2308
-#, fuzzy, c-format
-#| msgid ""
-#| "The program \"%s\" was found by \"%s\"\n"
-#| "but was not the same version as %s.\n"
-#| "Check your installation."
+#, c-format
 msgid "program \"%s\" was found by \"%s\" but was not the same version as %s"
-msgstr ""
-"El programa «%s» fue encontrado por «%s»,\n"
-"pero no es de la misma versión que %s.\n"
-"Verifique su instalación."
+msgstr "El programa «%s» fue encontrado por «%s», pero no es de la misma versión que %s"
 
 #: initdb.c:2323
 #, c-format
@@ -801,32 +758,22 @@ msgid "The database cluster will be initialized with locale \"%s\".\n"
 msgstr "El cluster será inicializado con configuración regional «%s».\n"
 
 #: initdb.c:2343
-#, fuzzy, c-format
-#| msgid "The database cluster will be initialized with locale \"%s\".\n"
+#, c-format
 msgid "The database cluster will be initialized with this locale configuration:\n"
-msgstr "El cluster será inicializado con configuración regional «%s».\n"
+msgstr "El cluster será inicializado con esta configuración regional:\n"
 
 #: initdb.c:2344
-#, fuzzy, c-format
-#| msgid "JIT provider to use."
+#, c-format
 msgid "  provider:    %s\n"
-msgstr "Proveedor JIT a usar."
+msgstr "  proveedor:    %s\n"
 
 #: initdb.c:2346
 #, c-format
 msgid "  ICU locale:  %s\n"
-msgstr ""
+msgstr "  Locale IC:    %s\n"
 
 #: initdb.c:2347
-#, fuzzy, c-format
-#| msgid ""
-#| "The database cluster will be initialized with locales\n"
-#| "  COLLATE:  %s\n"
-#| "  CTYPE:    %s\n"
-#| "  MESSAGES: %s\n"
-#| "  MONETARY: %s\n"
-#| "  NUMERIC:  %s\n"
-#| "  TIME:     %s\n"
+#, c-format
 msgid ""
 "  LC_COLLATE:  %s\n"
 "  LC_CTYPE:    %s\n"
@@ -835,26 +782,22 @@ msgid ""
 "  LC_NUMERIC:  %s\n"
 "  LC_TIME:     %s\n"
 msgstr ""
-"El cluster será inicializado con las configuraciones regionales\n"
-"  COLLATE:  %s\n"
-"  CTYPE:    %s\n"
-"  MESSAGES: %s\n"
-"  MONETARY: %s\n"
-"  NUMERIC:  %s\n"
-"  TIME:     %s\n"
+"  LC_COLLATE:  %s\n"
+"  LC_CTYPE:    %s\n"
+"  LC_MESSAGES: %s\n"
+"  LC_MONETARY: %s\n"
+"  LC_NUMERIC:  %s\n"
+"  LC_TIME:     %s\n"
 
 #: initdb.c:2372
 #, c-format
 msgid "could not find suitable encoding for locale \"%s\""
-msgstr ""
-"no se pudo encontrar una codificación apropiada para\n"
-"la configuración regional «%s»"
+msgstr "no se pudo encontrar una codificación apropiada para la configuración regional «%s»"
 
 #: initdb.c:2374
-#, fuzzy, c-format
-#| msgid "Rerun %s with the -E option.\n"
+#, c-format
 msgid "Rerun %s with the -E option."
-msgstr "Ejecute %s con la opción -E.\n"
+msgstr "Ejecute %s nuevamente con la opción -E."
 
 #: initdb.c:2375 initdb.c:2992 initdb.c:3012
 #, c-format
@@ -877,21 +820,14 @@ msgid "locale \"%s\" requires unsupported encoding \"%s\""
 msgstr "la configuración regional «%s» requiere la codificación no soportada «%s»"
 
 #: initdb.c:2394
-#, fuzzy, c-format
-#| msgid ""
-#| "Encoding \"%s\" is not allowed as a server-side encoding.\n"
-#| "Rerun %s with a different locale selection.\n"
+#, c-format
 msgid "Encoding \"%s\" is not allowed as a server-side encoding."
-msgstr ""
-"La codificación «%s» no puede ser usada como codificación del lado\n"
-"del servidor.\n"
-"Ejecute %s nuevamente con una selección de configuración regional diferente.\n"
+msgstr "La codificación «%s» no puede ser usada como codificación del lado del servidor."
 
 #: initdb.c:2396
-#, fuzzy, c-format
-#| msgid "Rerun %s with the -E option.\n"
+#, c-format
 msgid "Rerun %s with a different locale selection."
-msgstr "Ejecute %s con la opción -E.\n"
+msgstr "Ejecute %s nuevamente con opciones de configuración regional diferente."
 
 #: initdb.c:2404
 #, c-format
@@ -946,16 +882,9 @@ msgid "directory \"%s\" exists but is not empty"
 msgstr "el directorio «%s» existe pero no está vacío"
 
 #: initdb.c:2568
-#, fuzzy, c-format
-#| msgid ""
-#| "If you want to create a new database system, either remove or empty\n"
-#| "the directory \"%s\" or run %s\n"
-#| "with an argument other than \"%s\".\n"
+#, c-format
 msgid "If you want to create a new database system, either remove or empty the directory \"%s\" or run %s with an argument other than \"%s\"."
-msgstr ""
-"Si quiere crear un nuevo cluster de bases de datos, elimine o vacíe\n"
-"el directorio «%s», o ejecute %s\n"
-"con un argumento distinto de «%s».\n"
+msgstr "Si quiere crear un nuevo cluster de bases de datos, elimine o vacíe el directorio «%s», o ejecute %s con un argumento distinto de «%s»."
 
 #: initdb.c:2576 initdb.c:2646 initdb.c:3029
 #, c-format
@@ -968,14 +897,9 @@ msgid "WAL directory location must be an absolute path"
 msgstr "la ubicación del directorio de WAL debe ser una ruta absoluta"
 
 #: initdb.c:2640
-#, fuzzy, c-format
-#| msgid ""
-#| "If you want to store the WAL there, either remove or empty the directory\n"
-#| "\"%s\".\n"
+#, c-format
 msgid "If you want to store the WAL there, either remove or empty the directory \"%s\"."
-msgstr ""
-"Si quiere almacenar el WAL ahí, elimine o vacíe el directorio\n"
-"«%s».\n"
+msgstr "Si quiere almacenar el WAL ahí, elimine o vacíe el directorio «%s»."
 
 #: initdb.c:2651
 #, c-format
@@ -988,28 +912,23 @@ msgid "symlinks are not supported on this platform"
 msgstr "los enlaces simbólicos no están soportados en esta plataforma"
 
 #: initdb.c:2673
-#, fuzzy, c-format
-#| msgid "It contains a dot-prefixed/invisible file, perhaps due to it being a mount point.\n"
+#, c-format
 msgid "It contains a dot-prefixed/invisible file, perhaps due to it being a mount point."
-msgstr "Contiene un archivo invisible, quizás por ser un punto de montaje.\n"
+msgstr "Contiene un archivo invisible o que empieza con un punto (.), quizás por ser un punto de montaje."
 
 #: initdb.c:2675
-#, fuzzy, c-format
-#| msgid "It contains a lost+found directory, perhaps due to it being a mount point.\n"
+#, c-format
 msgid "It contains a lost+found directory, perhaps due to it being a mount point."
-msgstr "Contiene un directorio lost+found, quizás por ser un punto de montaje.\n"
+msgstr "Contiene un directorio lost+found, quizás por ser un punto de montaje."
 
 #: initdb.c:2677
-#, fuzzy, c-format
-#| msgid ""
-#| "Using a mount point directly as the data directory is not recommended.\n"
-#| "Create a subdirectory under the mount point.\n"
+#, c-format
 msgid ""
 "Using a mount point directly as the data directory is not recommended.\n"
 "Create a subdirectory under the mount point."
 msgstr ""
-"Usar un punto de montaje directamente como directorio de datos no es\n"
-"recomendado.  Cree un subdirectorio bajo el punto de montaje.\n"
+"Usar un punto de montaje directamente como directorio de datos no es recomendado.\n"
+"Cree un subdirectorio bajo el punto de montaje."
 
 #: initdb.c:2703
 #, c-format
@@ -1031,8 +950,7 @@ msgid "Running in no-clean mode.  Mistakes will not be cleaned up.\n"
 msgstr "Ejecutando en modo no-clean.  Los errores no serán limpiados.\n"
 
 #: initdb.c:2985
-#, fuzzy, c-format
-#| msgid "unrecognized collation provider: %s"
+#, c-format
 msgid "unrecognized locale provider: %s"
 msgstr "proveedor de ordenamiento no reconocido: %s"
 
@@ -1044,7 +962,7 @@ msgstr "demasiados argumentos en la línea de órdenes (el primero es «%s»)"
 #: initdb.c:3017
 #, c-format
 msgid "%s cannot be specified unless locale provider \"%s\" is chosen"
-msgstr ""
+msgstr "%s no puede especificarse a menos que el proveedor de locale «%s» sea escogido"
 
 #: initdb.c:3031 initdb.c:3108
 msgid "syncing data to disk ... "
@@ -1111,14 +1029,9 @@ msgid "enabling \"trust\" authentication for local connections"
 msgstr "activando el método de autentificación «trust» para conexiones locales"
 
 #: initdb.c:3120
-#, fuzzy, c-format
-#| msgid ""
-#| "You can change this by editing pg_hba.conf or using the option -A, or\n"
-#| "--auth-local and --auth-host, the next time you run initdb.\n"
+#, c-format
 msgid "You can change this by editing pg_hba.conf or using the option -A, or --auth-local and --auth-host, the next time you run initdb."
-msgstr ""
-"Puede cambiar esto editando pg_hba.conf o usando el parámetro -A,\n"
-"o --auth-local y --auth-host la próxima vez que ejecute initdb.\n"
+msgstr "Puede cambiar esto editando pg_hba.conf o usando el parámetro -A, o --auth-local y --auth-host la próxima vez que ejecute initdb."
 
 #. translator: This is a placeholder in a shell command.
 #: initdb.c:3150
@@ -1139,11 +1052,3 @@ msgstr ""
 "\n"
 "    %s\n"
 "\n"
-
-#, c-format
-#~ msgid "fatal: "
-#~ msgstr "fatal: "
-
-#, c-format
-#~ msgid "Try \"%s --help\" for more information.\n"
-#~ msgstr "Use «%s --help» para obtener mayor información.\n"
