--- a/src/bin/pg_archivecleanup/po/es.po
+++ b/src/bin/pg_archivecleanup/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: pg_archivecleanup (PostgreSQL) 14\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2022-08-07 20:21+0000\n"
-"PO-Revision-Date: 2020-09-12 23:13-0300\n"
+"PO-Revision-Date: 2022-09-03 15:29+0200\n"
 "Last-Translator: Carlos Chapi <carlos.chapi@2ndquadrant.com>\n"
 "Language-Team: PgSQL-es-Ayuda <pgsql-es-ayuda@lists.postgresql.org>\n"
 "Language: es\n"
@@ -31,12 +31,12 @@ msgstr "precaución: "
 #: ../../../src/common/logging.c:294
 #, c-format
 msgid "detail: "
-msgstr ""
+msgstr "detalle: "
 
 #: ../../../src/common/logging.c:301
 #, c-format
 msgid "hint: "
-msgstr ""
+msgstr "consejo: "
 
 #: pg_archivecleanup.c:66
 #, c-format
@@ -183,11 +183,3 @@ msgstr "debe especificar el fichero WAL más antiguo a mantener"
 #, c-format
 msgid "too many command-line arguments"
 msgstr "demasiados argumentos de línea de órdenes"
-
-#, c-format
-#~ msgid "fatal: "
-#~ msgstr "fatal: "
-
-#, c-format
-#~ msgid "Try \"%s --help\" for more information.\n"
-#~ msgstr "Pruebe «%s --help» para mayor información.\n"
