--- a/src/bin/pg_checksums/po/ka.po
+++ b/src/bin/pg_checksums/po/ka.po
@@ -1,7 +1,7 @@
-# LANGUAGE message translation file for pg_checksums
+# Georgian message translation file for pg_checksums
 # Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_checksums (PostgreSQL) package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# Temuri Doghonadze <temuri.doghonadze@gmail.com>, 2022.
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2022-07-02 04:51+0000\n"
 "PO-Revision-Date: 2022-07-04 17:50+0200\n"
 "Last-Translator: Temuri Doghonadze <temuri.doghonadze@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Georgian <nothing>\n"
 "Language: ka\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
